# Rental

./: .env  .env.example  add_addons_feature.sql  components.json  create_admin.py  fix_fleet.sql  fix_rentals.sql  package-lock.json  package.json  pyproject.toml  requirements.txt  setup_rentals.sql  tailwind.config.js  vercel.json  vite.config.js
api/: dependencies.py  index.py
api/routes/: addons.py  cashbook.py  financial.py  fleet.py  investors.py  profiles.py  rentals.py  settings.py
migrations/: 001_add_profiles_and_rls.sql  002_add_cashbook.sql  003_add_landing_settings.sql  add_investor_to_addons.sql
scratch/: check_fleet_cols.py  debug_db.py  test_db.py  test_update.py
src/: App.jsx  index.css  main.jsx
src/components/: ProtectedRoute.jsx  RoleGuard.jsx  ThemeContext.js  ThemeProvider.jsx  ThemeToggle.jsx
src/components/ui/: Badge.jsx  button.jsx  dialog.jsx  dropdown-menu.jsx  sheet.jsx  sonner.jsx
src/hooks/: useAuth.jsx
src/layouts/: AdminLayout.jsx
src/lib/: api.js
src/pages/: LandingPage.jsx
src/pages/admin/: Addons.jsx  Cashbook.jsx  Dashboard.jsx  Fleet.jsx  Investors.jsx  Profile.jsx  Rentals.jsx  Reports.jsx  Settings.jsx  Users.jsx
src/pages/auth/: Login.jsx
