[project]
name = "rental-sepeda"
version = "0.1.0"
description = "Backend API untuk Rental Sepeda"
requires-python = "~=3.12"
dependencies = [
    "fastapi==0.115.8",
    "uvicorn==0.34.0",
    "supabase==2.11.0",
    "pydantic==2.10.6",
    "python-dotenv==1.0.1",
    "PyJWT[crypto]==2.10.1",
    "httpx==0.28.1"
]

[tool.uv]
managed = true
